--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -3,7 +3,7 @@ Version: [[version]]
 Section: backup
 Priority: optional
 Architecture: all
-Maintainer: Riccardo Casqzza <riccardo.casazza@gmail.com>
+Maintainer: Riccardo Casazza <riccardo.casazza@gmail.com>
 Description: A tool to export photos from Apple Photos libraries
 Depends: oracle-java8-installer
 PreDepends: dpkg (>= 1.15.7.2)
