--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
 				<artifactId>jgitflow-maven-plugin</artifactId>
 				<version>1.0-m5.1</version>
 				<configuration>
-					<noDeploy>true</noDeploy>
+					<noDeploy>false</noDeploy>
 					<pushReleases>true</pushReleases>
 					<flowInitContext>
 						<masterBranchName>master</masterBranchName>
