--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.23.1</version>
-			<scope>runtime</scope>
+			<version>3.25.2</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
