--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it.fraguglia</groupId>
 	<artifactId>PhotosExport</artifactId>
-	<version>1.10.0-SNAPSHOT</version>
+	<version>1.9.0-SNAPSHOT</version>
 	<name>PhotosExport</name>
 	<description />
 	<inceptionYear>2018</inceptionYear>
@@ -236,7 +236,8 @@
 					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
 					<branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
 					<includes>
-						<include>**/*</include>
+						<include>**/maven(*)</include>
+						<include>**/*deb*</include>
 					</includes>
 					<repositoryName>${project.artifactId}</repositoryName>      <!-- github repo name -->
 					<repositoryOwner>ziobombo</repositoryOwner>    <!-- github username -->
