--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it.fraguglia</groupId>
 	<artifactId>PhotosExport</artifactId>
@@ -86,6 +87,7 @@
 	</dependencies>
 
 	<build>
+
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
@@ -96,12 +98,7 @@
 		<sourceDirectory>src/main/scala</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
 		<finalName>${project.artifactId}-${project.version}</finalName>
-		<resources>
-			<resource>
-				<directory>src/bin</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
+
 		<plugins>
 
 			<plugin>
@@ -197,7 +194,27 @@
 									</mapper>
 								</data>
 								<data>
-									<src>${project.build.directory}/classes/photos_export.sh</src>
+									<src>${project.build.directory}/classes/log4j.properties</src>
+									<type>file</type>
+									<mapper>
+										<type>perm</type>
+										<prefix>/usr/local/share/java/PhotosExport</prefix>
+										<user>root</user>
+										<group>root</group>
+										<filemode>775</filemode>
+									</mapper>
+								</data>
+								<data>
+									<type>template</type>
+									<paths>
+										<path>/var/log/PhotosExport</path>
+										<user>root</user>
+										<group>root</group>
+										<dirmode>777</dirmode>
+									</paths>
+								</data>
+								<data>
+									<src>${project.build.directory}/classes/bin/PhotosExport.sh</src>
 									<type>file</type>
 									<mapper>
 										<type>perm</type>
