--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.appender.sparkFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.sparkFileAppender.File=/var/log/PhotosExport/spark_${libraryName}.log
+log4j.appender.sparkFileAppender.File=${app.spark.log.file}
 log4j.appender.sparkFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.sparkFileAppender.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.sparkFileAppender.MaxFileSize=10MB
@@ -7,7 +7,7 @@ log4j.appender.sparkFileAppender.MaxBackupIndex=5
 log4j.appender.sparkFileAppender.append=true
 
 log4j.appender.appFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.appFileAppender.File=/var/log/PhotosExport/app_${libraryName}.log
+log4j.appender.appFileAppender.File=${app.log.file}
 log4j.appender.appFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.appFileAppender.layout.ConversionPattern=%d %-5p %c - %m%n
 log4j.appender.appFileAppender.MaxFileSize=10MB
