--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.appender.sparkFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.sparkFileAppender.File=${app.spark.log.file}
+log4j.appender.sparkFileAppender.File=${appSparkLogFile}
 log4j.appender.sparkFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.sparkFileAppender.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.sparkFileAppender.MaxFileSize=10MB
@@ -7,30 +7,30 @@ log4j.appender.sparkFileAppender.MaxBackupIndex=5
 log4j.appender.sparkFileAppender.append=true
 
 log4j.appender.appFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.appFileAppender.File=${app.log.file}
+log4j.appender.appFileAppender.File=${appLogFile}
 log4j.appender.appFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.appFileAppender.layout.ConversionPattern=%d %-5p %c - %m%n
 log4j.appender.appFileAppender.MaxFileSize=10MB
 log4j.appender.appFileAppender.MaxBackupIndex=5
 log4j.appender.appFileAppender.append=true
- 
+
 # By default, everything goes to console and file
 log4j.rootLogger=INFO, sparkFileAppender
 
 # My custom logging goes to another file
 log4j.logger.appLogger=DEBUG, appFileAppender
 log4j.additivity.appLogger=false
- 
+
 # The noisier spark logs go to file only
-log4j.logger.spark.storage=ERROR, errorConsoleAppender
+log4j.logger.spark.storage=ERROR, sparkFileAppender
 log4j.additivity.spark.storage=false
-log4j.logger.spark.scheduler=ERROR, errorConsoleAppender
+log4j.logger.spark.scheduler=ERROR, sparkFileAppender
 log4j.additivity.spark.scheduler=false
-log4j.logger.spark.CacheTracker=ERROR, errorConsoleAppender
+log4j.logger.spark.CacheTracker=ERROR, sparkFileAppender
 log4j.additivity.spark.CacheTracker=false
-log4j.logger.spark.CacheTrackerActor=ERROR, errorConsoleAppender
+log4j.logger.spark.CacheTrackerActor=ERROR, sparkFileAppender
 log4j.additivity.spark.CacheTrackerActor=false
-log4j.logger.spark.MapOutputTrackerActor=ERROR, errorConsoleAppender
+log4j.logger.spark.MapOutputTrackerActor=ERROR, sparkFileAppender
 log4j.additivity.spark.MapOutputTrackerActor=false
-log4j.logger.spark.MapOutputTracker=ERROR, errorConsoleAppender
+log4j.logger.spark.MapOutputTracker=ERROR, sparkFileAppender
 log4j.additivty.spark.MapOutputTracker=false
